--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   bottom_navy_bar: 6.0.0
   firebase_core: ^3.0.0
   cloud_firestore: ^5.0.0
+  simple_gradient_text: ^1.3.0
 
 dev_dependencies:
   flutter_test:
