--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^3.0.0
   cloud_firestore: ^5.0.0
   simple_gradient_text: ^1.3.0
+  flutter_calendar_carousel: ^2.4.3
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
